# ccheckers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: board.rs  common.rs  lib.rs  main.rs  player.rs
src/common/: board.rs  egui_defs.rs  js_comms.rs  player.rs
static/: index.html
