[package]
name = "ccheckers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ccheckers"
path = "src/main.rs"

[lib]
name = "ccheckers"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
nannou = "0.18.1"
nannou_egui = "0.5.0"
strum = "0.24.1"
strum_macros = "0.24.3"

# web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
async-std = "1.10"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"