[package]
name = "ccheckers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ccheckers"
path = "src/main.rs"

[lib]
name = "ccheckers_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.nannou]
version = "0.18.1"
git = "https://github.com/nannou-org/nannou.git"
rev = "287be8a4d075b17332ca0bf34649f5d25e751c00"
features = [ "wasm-experimental" ]

[target."cfg(not(target_arch=\"wasm32\"))".dependencies.nannou_egui]
version = "0.5.0"
git = "https://github.com/nannou-org/nannou.git"
rev = "287be8a4d075b17332ca0bf34649f5d25e751c00"

[dependencies]
itertools = "0.10.5"
strum = "0.24.1"
strum_macros = "0.24.3"

[target."cfg(target_arch=\"wasm32\")".dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
async-std = "1.10"
console_error_panic_hook = "0.1.5"